# mnemo

./: .gitignore  .gitlab-ci.yml  README.md  docker-compose.yml  pyproject.toml
benchmarks/: BENCHMARKS.md  compare_systems.md  longmemeval_bench.py  longmemeval_runner.py
benchmarks/results/: mnemo_raw_hash_n10.jsonl  mnemo_raw_minilm_n25.jsonl  mnemo_raw_minilm_n5.jsonl  mnemo_raw_minilm_n500.jsonl
docs/: ADR-001-four-tier-architecture.md  ADR-002-inmemory-backend-semantics.md  ADR-003-working-memory-eviction.md  ADR-004-episodic-bi-temporal.md  ADR-005-embedding-layer.md  ADR-006-vector-retrieval.md  ADR-007-semantic-tier-l0.md  ADR-008-l1-template-matching.md  ADR-009-temporal-decay.md  ADR-010-complete-library.md  metadata-schema.md  voxgraph_integration.md
notes/: BUILD_LOG.md
scripts/: decay_benchmark.py  download_longmemeval.ps1  run_integration_tests.ps1
src/mnemo/: __init__.py  decay.py  models.py  policy.py  types.py
src/mnemo/api/: __init__.py  client.py  forget.py  recall.py
src/mnemo/backends/: __init__.py  base.py  memory.py  (+6 more)
tests/: conftest.py  test_composite_backend.py  test_decay.py  test_embeddings.py  test_episodic_decay.py  test_episodic_memory.py  test_episodic_semantic.py  test_exact_vector_backend.py  test_in_memory_backend.py  test_kl_scorer.py  test_l0_extractor.py  test_l1_extractor.py  test_l2_pipeline.py  test_mnemo_api.py  test_models.py  test_pgvector_backend.py  test_policy_loader.py  test_procedural_memory.py  test_redis_backend.py  test_semantic_l1.py  test_semantic_memory.py  test_sqlite_backend.py  test_working_memory.py
(+26 files in other folders)
