[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mnemo"
version = "0.1.0a0"
description = "A 4-tier, backend-agnostic, cost-aware memory library for LLM agents."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Mnemo Maintainers" }]
keywords = ["llm", "agents", "memory", "ai"]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Typing :: Typed",
]
dependencies = [
    "pydantic>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
]
local-embeddings = [
    "sentence-transformers>=2.2.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/mnemo"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"
